<resources>
    <string name="app_name">ToDoList</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (Required)</string>
    <string name="prompt_password">Password (Required)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="action_settings">Sign out</string>
    <string name="email_in_use">This email is already in use, use correct password or sign up with a different email.</string>
    <string name="try_again">Something went wrong, please try again later</string>
    <string name="title_required">Title (Required)</string>
    <string name="description_required">Description (Required)</string>
    <string name="remind_on">Remind on (mmddyyyy)</string>
    <string name="no_items_found">No items found</string>
    <string name="title_activity_to_do_item">ToDoItemActivity</string>
    <string name="delete">Delete ToDo item</string>
    <string name="are_you_sure">Are you sure you want to delete</string>
    <string name="from_list">from this list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome</string>
    <string name="name_optional">Name (optional)</string>
    <string name="no_todo_items_found">No todo items found</string>
    <string name="no_todo">You currently have no todo items</string>
    <string name="date_format_incorrect">Please follow the correct date format</string>
    <string name="task_crated">Task created on</string>
    <string name="no_reminder">No reminder set</string>
    <string name="dummy">dummy</string>
    <string name="no_items_list">You have no tasks scheduled. Click on the + icon on top to add a new item.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
