<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    tools:context="com.example.abdallaah.todolist.App.Fragments.ToDoItemFormFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/recycleColor"
        app:cardCornerRadius="10dp"
        app:cardElevation="13dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_required"
                    android:maxLength="30"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/description_required"
                    android:inputType="textMultiLine"
                    android:maxLines="30"
                    android:minHeight="100dp"
                    android:nestedScrollingEnabled="true"
                    tools:targetApi="lollipop" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="8">

                <EditText
                    android:id="@+id/date_remind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remind_on"
                    android:inputType="datetime"
                    android:maxLength="8"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="11dp"
        app:srcCompat="@drawable/save" />

</FrameLayout>
